--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <nav class="navbar navbar-expand-lg glassy sticky-top border-bottom border-primary-subtle mt-2">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="img/perfilguild.gif" alt="Guild Logo"
+        <img src="img/nitro.gif" alt="Guild Logo"
           style="width:32px;height:32px;border-radius:8px;object-fit:cover">
-        <span class="fw-bold">𝟕𝟕𝟕</span>
+        <span class="fw-bold">GuildPrix</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
         <span class="navbar-toggler-icon"></span>
@@ -28,30 +28,53 @@
           <li class="nav-item"><a class="nav-link" href="prix.html">Prix</a></li>
           <li class="nav-item"><a class="nav-link" href="ranking.html">Ranking</a></li>
           <li class="nav-item"><a class="nav-link" href="live.html">Videos</a></li>
-          
         </ul>
       </div>
     </div>
   </nav>
 
   <main class="container py-5">
-    <!-- Mismo look que el contenedor glassy de Prix -->
+
+    <!-- ===================== -->
+    <!-- 2026 (PRIMERO)        -->
+    <!-- ===================== -->
+    <div class="glassy hero-bar p-5 text-center rounded-4 mb-4">
+      <div class="d-flex align-items-center justify-content-between mb-2">
+        <h2 class="h5 fw-extrabold m-0">GUILD PRIX — 2026</h2>
+        <span class="badge text-bg-warning text-dark">Raиkک™</span>
+      </div>
+
+      <!-- Duplicado: cambia la imagen cuando quieras -->
+      <img src="img/portadadelguild2026.gif" alt="Portada del Guild 2026" class="img-fluid rounded-4 mt-2 mb-4" />
+
+      <h1 class="display-4 fw-extrabold neon">GuildPrix <span class="text-primary">Top #___</span></h1>
+      <p class="organizers lead m-0" style="color:#0b0f19;">
+        <i class="bi-people me-1"></i>
+        Organizador - Lider ||
+        <span class="chip"> Yover - Johnatan</span>
+      </p>
+    </div>
+
+    <!-- ===================== -->
+    <!-- 2025 (REGISTRO)       -->
+    <!-- ===================== -->
     <div class="glassy hero-bar p-5 text-center rounded-4">
+      <div class="d-flex align-items-center justify-content-between mb-2">
+        <h2 class="h5 fw-extrabold m-0">GUILD PRIX — 2025</h2>
+        <span class="badge text-bg-warning text-dark">𝟕𝟕𝟕</span>
+      </div>
+
       <img src="img/portadadelguild.gif" alt="Portada del Guild" class="img-fluid rounded-4 mt-2 mb-4" />
       <h1 class="display-4 fw-extrabold neon">GuildPrix <span class="text-primary">Top #7</span></h1>
       <p class="organizers lead m-0" style="color:#0b0f19;">
         <i class="bi-people me-1"></i>
         Organizador - Lider ||
         <span class="chip"> Gustavo</span>
-
       </p>
-
-
-      
     </div>
+
   </main>
 
-  <!-- Footer fuera del main, a nivel de body -->
   <footer class="footer" id="contacto">
     <div class="container">
       <p class="footer__copy m-0">© 2025 — By Yover Castillo</p>
