--- a/live.html
+++ b/live.html
@@ -26,7 +26,7 @@
           href="index.html"
         >
           <img
-            src="img/perfilguild.gif"
+            src="img/nitro.gif"
             alt="Guild Logo"
             style="
               width: 32px;
@@ -64,6 +64,188 @@
       </div>
     </nav>
 
+    <!-- ===================== -->
+    <!-- 2026 (PRIMERO / VACÍO)-->
+    <!-- ===================== -->
+    <main class="container py-5">
+      <div class="glassy p-4 p-md-5 rounded-4">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <h1 class="h3 fw-extrabold m-0 neon">
+            <i class="bi bi-broadcast-pin me-2"></i>Partida - 2026 (********)
+          </h1>
+        </div>
+
+        <!-- Placeholder 2026: SIN iframe real para evitar error 153 y porque aún no hay video -->
+        <div class="ratio ratio-16x9 rounded-3 overflow-hidden">
+          <div
+            class="w-100 h-100 d-flex flex-column align-items-center justify-content-center"
+            style="background: rgba(0,0,0,.35);"
+          >
+            <i class="bi bi-camera-video-off" style="font-size: 2rem;"></i>
+            <div class="mt-2 fw-bold">Aún no hay video 2026</div>
+            <div class="opacity-75" style="font-size: .95rem;">
+              Cuando esté la partida, aquí pegas el enlace de YouTube.
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <main class="container py-5">
+      <div class="glassy p-4 p-md-5 rounded-4">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <h1 class="h3 fw-extrabold m-0 neon">
+            <i class="bi bi-broadcast-pin me-2"></i>Enlaces de partidas — 2026
+          </h1>
+          <span class="badge text-bg-primary d-none d-md-inline"
+            >DragonBound</span
+          >
+        </div>
+
+        <!-- Acordeón por jugador 2026 (TODO EN 0 / SIN LINKS) -->
+        <div class="accordion accordion-flush" id="accordionJugadores2026">
+          <!-- Frank -->
+          <div class="accordion-item glassy rounded-3 mb-2">
+            <h2 class="accordion-header" id="y2026_headFrank">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#y2026_colFrank"
+                aria-expanded="false"
+                aria-controls="y2026_colFrank"
+              >
+                <i class="bi bi-person-fill me-2"></i> Frank
+                <span class="badge text-bg-secondary ms-2">0</span>
+              </button>
+            </h2>
+            <div
+              id="y2026_colFrank"
+              class="accordion-collapse collapse"
+              aria-labelledby="y2026_headFrank"
+              data-bs-parent="#accordionJugadores2026"
+            >
+              <div class="accordion-body">
+                <div class="opacity-75">Sin partidas aún.</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Miguel -->
+          <div class="accordion-item glassy rounded-3 mb-2">
+            <h2 class="accordion-header" id="y2026_headMiguel">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#y2026_colMiguel"
+                aria-expanded="false"
+                aria-controls="y2026_colMiguel"
+              >
+                <i class="bi bi-person-fill me-2"></i> Miguel
+                <span class="badge text-bg-secondary ms-2">0</span>
+              </button>
+            </h2>
+            <div
+              id="y2026_colMiguel"
+              class="accordion-collapse collapse"
+              aria-labelledby="y2026_headMiguel"
+              data-bs-parent="#accordionJugadores2026"
+            >
+              <div class="accordion-body">
+                <div class="opacity-75">Sin partidas aún.</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Jean -->
+          <div class="accordion-item glassy rounded-3 mb-2">
+            <h2 class="accordion-header" id="y2026_headJean">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#y2026_colJean"
+                aria-expanded="false"
+                aria-controls="y2026_colJean"
+              >
+                <i class="bi bi-person-fill me-2"></i> Jean
+                <span class="badge text-bg-secondary ms-2">0</span>
+              </button>
+            </h2>
+            <div
+              id="y2026_colJean"
+              class="accordion-collapse collapse"
+              aria-labelledby="y2026_headJean"
+              data-bs-parent="#accordionJugadores2026"
+            >
+              <div class="accordion-body">
+                <div class="opacity-75">Sin partidas aún.</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Nicson -->
+          <div class="accordion-item glassy rounded-3 mb-2">
+            <h2 class="accordion-header" id="y2026_headNicson">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#y2026_colNicson"
+                aria-expanded="false"
+                aria-controls="y2026_colNicson"
+              >
+                <i class="bi bi-person-fill me-2"></i> Nicson
+                <span class="badge text-bg-secondary ms-2">0</span>
+              </button>
+            </h2>
+            <div
+              id="y2026_colNicson"
+              class="accordion-collapse collapse"
+              aria-labelledby="y2026_headNicson"
+              data-bs-parent="#accordionJugadores2026"
+            >
+              <div class="accordion-body">
+                <div class="opacity-75">Sin partidas aún.</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Chino -->
+          <div class="accordion-item glassy rounded-3 mb-2">
+            <h2 class="accordion-header" id="y2026_headChino">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#y2026_colChino"
+                aria-expanded="false"
+                aria-controls="y2026_colChino"
+              >
+                <i class="bi bi-person-fill me-2"></i> Chino
+                <span class="badge text-bg-secondary ms-2">0</span>
+              </button>
+            </h2>
+            <div
+              id="y2026_colChino"
+              class="accordion-collapse collapse"
+              aria-labelledby="y2026_headChino"
+              data-bs-parent="#accordionJugadores2026"
+            >
+              <div class="accordion-body">
+                <div class="opacity-75">Sin partidas aún.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /accordion 2026 -->
+      </div>
+    </main>
+
+    <!-- ===================== -->
+    <!-- 2025 (ORIGINAL ABAJO) -->
+    <!-- ===================== -->
     <main class="container py-5">
       <div class="glassy p-4 p-md-5 rounded-4">
         <div class="d-flex align-items-center justify-content-between mb-3">
@@ -85,6 +267,7 @@
         </div>
       </div>
     </main>
+
     <main class="container py-5">
       <div class="glassy p-4 p-md-5 rounded-4">
         <div class="d-flex align-items-center justify-content-between mb-3">
@@ -596,11 +779,7 @@
         </div>
         <!-- /accordion -->
       </div>
-
-
     </main>
-
-    
 
     <footer class="footer" id="contacto">
       <div class="container">
