--- a/prix.html
+++ b/prix.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg glassy sticky-top border-bottom border-primary-subtle mt-2">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="img/perfilguild.gif" alt="Guild Logo"
+        <img src="img/nitro.gif" alt="Guild Logo"
           style="width:32px;height:32px;border-radius:8px;object-fit:cover">
         <span class="fw-bold">𝟕𝟕𝟕</span>
       </a>
@@ -35,6 +35,143 @@
   </nav>
 
   <main class="container py-4">
+
+    <!-- ===================== -->
+    <!-- 2026 (PRIMERO)        -->
+    <!-- ===================== -->
+    <div class="glassy p-3 p-md-4 rounded-4 mb-4">
+      <div class="d-flex align-items-center justify-content-between mb-3">
+        <h1 class="h4 fw-extrabold m-0">GUILD PRIX — BUNGE — 2026</h1>
+        <span class="badge text-bg-warning text-dark">Raиkک™</span>
+      </div>
+
+      <div class="table-responsive">
+        <table class="table sheet align-middle">
+          <thead>
+            <tr class="sheet-head">
+              <th>TEAM</th>
+              <th>1</th>
+              <th>2</th>
+              <th>3</th>
+              <th>4</th>
+              <th>5</th>
+              <th>6</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- PISADOR  -->
+            <tr class="sheet-subhead">
+              <th class="text-start">PISADOR</th>
+              <th>Frank</th>
+              <th>Carlos</th>
+              <th>Chino</th>
+              <th>Benja</th>
+              <th>-------</th>
+              <th>-------</th>
+            </tr>
+
+            <!-- CUENTAS  -->
+            <tr>
+              <th class="text-start">CUENTAS</th>
+              <td class="p-0">
+                <div class="sheet-cuentas">
+                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                </div>
+              </td>
+              <td class="p-0">
+                <div class="sheet-cuentas">
+                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                </div>
+              </td>
+              <td class="p-0">
+                <div class="sheet-cuentas">
+                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                </div>
+              </td>
+              <td class="p-0">
+                <div class="sheet-cuentas">
+                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                </div>
+              </td>
+              <td class="p-0">
+                <div class="sheet-cuentas">
+                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                </div>
+              </td>
+              <td class="p-0">
+                <div class="sheet-cuentas">
+                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                </div>
+              </td>
+            </tr>
+
+            <!---- PRIMERA HORA ---->
+            <tr class="sheet-block">
+              <th rowspan="2">1RA HORA</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+            </tr>
+            <tr class="sheet-block">
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+            </tr>
+
+            <!---- SEGUNDA HORA ---->
+            <tr class="sheet-block">
+              <th rowspan="2">2DA HORA</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+            </tr>
+            <tr class="sheet-block">
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+              <th class="lose">0</th>
+            </tr>
+
+            <!-- SubTotal -->
+            <tr class="sheet-total">
+              <th>SubTotal</th>
+              <th></th><th></th><th></th><th></th><th></th><th></th>
+            </tr>
+
+            <!-- TOTAL  -->
+            <tr class="sheet-total strong">
+              <th></th>
+              <th class="text-end" colspan="5">TOTAL</th>
+              <th class="total-num"></th>
+            </tr>
+
+            <!-- PUNTOS  -->
+            <tr class="sheet-total strong">
+              <th></th>
+              <th class="text-end" colspan="5">PUNTOS</th>
+              <th style="font-size:1.25rem; font-weight:800; text-align:center; color:#fff; text-shadow:0 1px 1px rgba(255,0,0,.25);">
+                0
+              </th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <!-- ===================== -->
+    <!-- 2025 (REGISTRO)       -->
+    <!-- ===================== -->
     <div class="glassy p-3 p-md-4 rounded-4">
       <div class="d-flex align-items-center justify-content-between mb-3">
         <h1 class="h4 fw-extrabold m-0">GUILD PRIX — BUNGE — 2025</h1>
@@ -53,8 +190,6 @@
               <th>4</th>
               <th>5</th>
               <th>6</th>
-
-
             </tr>
           </thead>
           <tbody>
@@ -121,50 +256,44 @@
                   <div>Kimbherly</div>
                 </div>
               </td>
-
             </tr>
 
             <!---- PRIMERA HORA ---->
             <tr class="sheet-block">
-              <th rowspan="2">1RA HORA</th> <!-- WIN -->
-              <th class="win">9</th> <!-- Chino -->
-              <th class="win">7</th> <!-- Jean PC -->
-              <th class="win">2</th> <!-- Nicson -->
-              <th class="win">8</th> <!-- Carlos -->
-              <th class="win">10</th> <!-- Miguel -->
-              <th class="win">10</th> <!-- Frank -->
-
+              <th rowspan="2">1RA HORA</th>
+              <th class="win">9</th>
+              <th class="win">7</th>
+              <th class="win">2</th>
+              <th class="win">8</th>
+              <th class="win">10</th>
+              <th class="win">10</th>
             </tr>
-            <tr class="sheet-block"> <!-- LOSE -->
-              <th class="lose">8</th> <!-- Chino -->
-              <th class="lose">10</th> <!-- Jean PC -->
-              <th class="lose">4</th> <!-- Nicson -->
-              <th class="lose">2</th> <!-- Carlos -->
-              <th class="lose">9</th> <!-- Miguel -->
-              <th class="lose">5</th> <!-- Frank -->
-
-
+            <tr class="sheet-block">
+              <th class="lose">8</th>
+              <th class="lose">10</th>
+              <th class="lose">4</th>
+              <th class="lose">2</th>
+              <th class="lose">9</th>
+              <th class="lose">5</th>
             </tr>
 
             <!---- SEGUNDA HORA ---->
             <tr class="sheet-block">
-              <th rowspan="2">2DA HORA</th> <!-- WIN -->
-              <th class="win">7</th> <!-- Chino -->
-              <th class="win">0</th> <!-- Jean PC -->
-              <th class="win">0</th> <!-- Nicson -->
-              <th class="win">7</th> <!-- Carlos -->
-              <th class="win">0</th> <!-- Miguel -->
-              <th class="win">10</th> <!-- Frank -->
-
+              <th rowspan="2">2DA HORA</th>
+              <th class="win">7</th>
+              <th class="win">0</th>
+              <th class="win">0</th>
+              <th class="win">7</th>
+              <th class="win">0</th>
+              <th class="win">10</th>
             </tr>
-            <tr class="sheet-block"> <!-- LOSE -->
-              <th class="lose">3</th> <!-- Chino -->
-              <th class="lose">0</th> <!-- Jean PC -->
-              <th class="lose">1</th> <!-- Nicson -->
-              <th class="lose">3</th> <!-- Carlos -->
-              <th class="lose">0</th> <!-- Miguel -->
-              <th class="lose">2</th> <!-- Frank -->
-
+            <tr class="sheet-block">
+              <th class="lose">3</th>
+              <th class="lose">0</th>
+              <th class="lose">1</th>
+              <th class="lose">3</th>
+              <th class="lose">0</th>
+              <th class="lose">2</th>
             </tr>
 
             <!-- SubTotal -->
@@ -172,12 +301,10 @@
               <th>SubTotal</th>
               <th></th>
               <th></th>
-
               <th></th>
               <th></th>
               <th></th>
               <th></th>
-
             </tr>
 
             <!-- TOTAL  -->
@@ -191,19 +318,15 @@
             <tr class="sheet-total strong">
               <th></th>
               <th class="text-end" colspan="5">PUNTOS</th>
-              <th
-                style="font-size:1.25rem; font-weight:800; text-align:center; color:#fff; text-shadow:0 1px 1px rgba(255,0,0,.25);">
+              <th style="font-size:1.25rem; font-weight:800; text-align:center; color:#fff; text-shadow:0 1px 1px rgba(255,0,0,.25);">
                 23
               </th>
             </tr>
-
-
-
-
           </tbody>
         </table>
       </div>
     </div>
+
   </main>
 
   <footer class="footer" id="contacto">
