--- a/live.html
+++ b/live.html
@@ -35,7 +35,7 @@
               object-fit: cover;
             "
           />
-          <span class="fw-bold">𝟕𝟕𝟕</span>
+          <span class="fw-bold">Raиkک™</span>
         </a>
         <button
           class="navbar-toggler"
