--- a/live.html
+++ b/live.html
@@ -71,7 +71,7 @@
       <div class="glassy p-4 p-md-5 rounded-4">
         <div class="d-flex align-items-center justify-content-between mb-3">
           <h1 class="h3 fw-extrabold m-0 neon">
-            <i class="bi bi-broadcast-pin me-2"></i>Partida - 2026 (********)
+            <i class="bi bi-broadcast-pin me-2"></i>Partida - 2026 (**)
           </h1>
         </div>
 
@@ -142,7 +142,7 @@
                 aria-expanded="false"
                 aria-controls="y2026_colMiguel"
               >
-                <i class="bi bi-person-fill me-2"></i> Miguel
+                <i class="bi bi-person-fill me-2"></i> Carlos
                 <span class="badge text-bg-secondary ms-2">0</span>
               </button>
             </h2>
@@ -169,7 +169,7 @@
                 aria-expanded="false"
                 aria-controls="y2026_colJean"
               >
-                <i class="bi bi-person-fill me-2"></i> Jean
+                <i class="bi bi-person-fill me-2"></i> Chino
                 <span class="badge text-bg-secondary ms-2">0</span>
               </button>
             </h2>
@@ -196,7 +196,7 @@
                 aria-expanded="false"
                 aria-controls="y2026_colNicson"
               >
-                <i class="bi bi-person-fill me-2"></i> Nicson
+                <i class="bi bi-person-fill me-2"></i> Benja
                 <span class="badge text-bg-secondary ms-2">0</span>
               </button>
             </h2>
@@ -223,7 +223,7 @@
                 aria-expanded="false"
                 aria-controls="y2026_colChino"
               >
-                <i class="bi bi-person-fill me-2"></i> Chino
+                <i class="bi bi-person-fill me-2"></i> -----
                 <span class="badge text-bg-secondary ms-2">0</span>
               </button>
             </h2>
