--- a/live.html
+++ b/live.html
@@ -26,7 +26,7 @@
           href="index.html"
         >
           <img
-            src="img/nitro.gif"
+            src="img/perfilguild2026.gif"
             alt="Guild Logo"
             style="
               width: 32px;
