--- a/prix.html
+++ b/prix.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg glassy sticky-top border-bottom border-primary-subtle mt-2">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="img/nitro.gif" alt="Guild Logo"
+        <img src="img/perfilguild2026.gif" alt="Guild Logo"
           style="width:32px;height:32px;border-radius:8px;object-fit:cover">
         <span class="fw-bold">Raиkک™</span>
       </a>
