--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
         <img src="img/perfilguild2026.gif" alt="Guild Logo"
           style="width:32px;height:32px;border-radius:8px;object-fit:cover">
-        <span class="fw-bold">GuildPrix</span>
+        <span class="fw-bold">Raиkک™</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
         <span class="navbar-toggler-icon"></span>
