--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <p class="organizers lead m-0" style="color:#0b0f19;">
         <i class="bi-people me-1"></i>
         Organizador - Lider ||
-        <span class="chip"> Gustavo</span>
+        <span class="chip"> Yover - Gustavo</span>
       </p>
     </div>
 
