--- a/live.html
+++ b/live.html
@@ -84,7 +84,7 @@
             <i class="bi bi-camera-video-off" style="font-size: 2rem;"></i>
             <div class="mt-2 fw-bold">Aún no hay video 2026</div>
             <div class="opacity-75" style="font-size: .95rem;">
-              Cuando esté la partida, aquí pegas el enlace de YouTube.
+              a la espera.
             </div>
           </div>
         </div>
