--- a/live.html
+++ b/live.html
@@ -71,7 +71,7 @@
       <div class="glassy p-4 p-md-5 rounded-4">
         <div class="d-flex align-items-center justify-content-between mb-3">
           <h1 class="h3 fw-extrabold m-0 neon">
-            <i class="bi bi-broadcast-pin me-2"></i>Partida - 2026 (**)
+            <i class="bi bi-broadcast-pin me-2"></i>Tranmisión en VIVO
           </h1>
         </div>
 
@@ -82,9 +82,9 @@
             style="background: rgba(0,0,0,.35);"
           >
             <i class="bi bi-camera-video-off" style="font-size: 2rem;"></i>
-            <div class="mt-2 fw-bold">Aún no hay video 2026</div>
+            <div class="mt-2 fw-bold">Aún no hay tranmisión</div>
             <div class="opacity-75" style="font-size: .95rem;">
-              a la espera.
+              a la espera
             </div>
           </div>
         </div>
