--- a/prix.html
+++ b/prix.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DragonBound</title>
+  <title>DragonBound — Prix</title>
   <link rel="icon" href="img/favicon.ico" sizes="any">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -25,10 +25,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link active" href="prix.html">Prix</a></li>
-          <li class="nav-item"><a class="nav-link" href="ranking.html">Ranking</a></li>
-          <li class="nav-item"><a class="nav-link" href="live.html">Videos</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-door me-1"></i>Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" href="prix.html"><i class="bi bi-trophy me-1"></i>Prix</a></li>
+          <li class="nav-item"><a class="nav-link" href="ranking.html"><i class="bi bi-bar-chart me-1"></i>Ranking</a></li>
+          <li class="nav-item"><a class="nav-link" href="live.html"><i class="bi bi-play-circle me-1"></i>Videos</a></li>
         </ul>
       </div>
     </div>
@@ -61,7 +61,7 @@
           <tbody>
             <!-- PISADOR  -->
             <tr class="sheet-subhead">
-              <th class="text-start">PISADOR</th>
+              <th>PISADOR</th>
               <th>Frank</th>
               <th>Carlos</th>
               <th>Chino</th>
@@ -72,7 +72,7 @@
 
             <!-- CUENTAS  -->
             <tr>
-              <th class="text-start">CUENTAS</th>
+              <th>CUENTAS</th>
               <td class="p-0">
                 <div class="sheet-cuentas">
                   <div>—</div><div>—</div><div>—</div><div>—</div>
@@ -185,7 +185,6 @@
               <th>TEAM</th>
               <th>1</th>
               <th>2</th>
-
               <th>3</th>
               <th>4</th>
               <th>5</th>
@@ -195,7 +194,7 @@
           <tbody>
             <!-- PISADOR  -->
             <tr class="sheet-subhead">
-              <th class="text-start">PISADOR</th>
+              <th>PISADOR</th>
               <th>Chino</th>
               <th>Jean PC</th>
               <th>Nicson</th>
@@ -206,7 +205,7 @@
 
             <!-- CUENTAS  -->
             <tr>
-              <th class="text-start">CUENTAS</th>
+              <th>CUENTAS</th>
               <td class="p-0">
                 <div class="sheet-cuentas">
                   <div>LEON DORADO</div>
@@ -223,7 +222,6 @@
                   <div>#Mr Matasquita~</div>
                 </div>
               </td>
-
               <td class="p-0">
                 <div class="sheet-cuentas">
                   <div>XxCeSarstOnexX</div>
@@ -329,11 +327,12 @@
 
   </main>
 
-  <footer class="footer" id="contacto">
-    <p class="footer__copy">© 2025 — By Yover Castillo</p>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer__copy m-0">© 2025 — By Yover Castillo</p>
+    </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
