--- a/ranking.html
+++ b/ranking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DragonBound</title>
+  <title>DragonBound — Ranking</title>
   <link rel="icon" href="img/favicon.ico" sizes="any">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -23,10 +23,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="prix.html">Prix</a></li>
-          <li class="nav-item"><a class="nav-link active" href="ranking.html">Ranking</a></li>
-          <li class="nav-item"><a class="nav-link" href="live.html">Videos</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-door me-1"></i>Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="prix.html"><i class="bi bi-trophy me-1"></i>Prix</a></li>
+          <li class="nav-item"><a class="nav-link active" href="ranking.html"><i class="bi bi-bar-chart me-1"></i>Ranking</a></li>
+          <li class="nav-item"><a class="nav-link" href="live.html"><i class="bi bi-play-circle me-1"></i>Videos</a></li>
         </ul>
       </div>
     </div>
@@ -41,7 +41,7 @@
       <div class="glassy rounded-4 p-4 mb-4 d-flex align-items-center justify-content-between">
         <div>
           <h1 class="h3 fw-extrabold m-0 neon">
-            <i class="bi bi-trophy"></i> Ranking — Desempeño Individual — 2026
+            <i class="bi bi-trophy me-2"></i>Ranking — Desempeño Individual — 2026
           </h1>
         </div>
         <span class="badge text-bg-warning text-dark">Raиkک™</span>
@@ -92,7 +92,7 @@
       </section>
 
       <section class="glassy rounded-4 p-3 p-md-4 mb-5">
-        <h2 class="h5 mb-3"><i class="bi bi-award"></i> Puestos 4 al 6</h2>
+        <h2 class="h5 mb-3"><i class="bi bi-award me-2"></i>Puestos 4 al 6</h2>
         <ul class="rank-list m-0 p-0"></ul>
       </section>
     </section>
@@ -104,7 +104,7 @@
       <div class="glassy rounded-4 p-4 mb-4 d-flex align-items-center justify-content-between">
         <div>
           <h1 class="h3 fw-extrabold m-0 neon">
-            <i class="bi bi-trophy"></i> Ranking — Desempeño Individual — 2025
+            <i class="bi bi-trophy me-2"></i>Ranking — Desempeño Individual — 2025
           </h1>
         </div>
         <span class="badge text-bg-warning text-dark">𝟕𝟕𝟕</span>
@@ -155,15 +155,17 @@
       </section>
 
       <section class="glassy rounded-4 p-3 p-md-4">
-        <h2 class="h5 mb-3"><i class="bi bi-award"></i> Puestos 4 al 6</h2>
+        <h2 class="h5 mb-3"><i class="bi bi-award me-2"></i>Puestos 4 al 6</h2>
         <ul class="rank-list m-0 p-0"></ul>
       </section>
     </section>
 
   </main>
 
-  <footer class="footer" id="contacto">
-    <p class="footer__copy">© 2025 — By Yover Castillo</p>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer__copy m-0">© 2025 — By Yover Castillo</p>
+    </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
