--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <i class="bi bi-trophy-fill me-1"></i>Top Guilds
           </span>
           <span class="badge bg-warning bg-opacity-25 px-3 py-2 border border-warning border-opacity-25">
-            <i class="bi bi-joystick me-1"></i>Bunge Mode
+            <i class="bi bi-joystick me-1"></i>Modo Bunge
           </span>
           <span class="badge bg-info bg-opacity-25 px-3 py-2 border border-info border-opacity-25">
-            <i class="bi bi-people-fill me-1"></i>Team Battle
+            <i class="bi bi-people-fill me-1"></i>Team Batalla
           </span>
         </div>
       </div>
