--- a/prix.html
+++ b/prix.html
@@ -66,8 +66,8 @@
               <th>Carlos</th>
               <th>Chino</th>
               <th>Benja</th>
-              <th>-------</th>
-              <th>-------</th>
+              <th>Yoel</th>
+              <th>Isaac</th>
             </tr>
 
             <!-- CUENTAS  -->
