--- a/prix.html
+++ b/prix.html
@@ -75,17 +75,17 @@
               <th>CUENTAS</th>
               <td class="p-0">
                 <div class="sheet-cuentas">
-                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                  <div>Explosive</div><div>Locurita</div><div>l=APOCALIPSIS=l</div><div>—</div>
                 </div>
               </td>
               <td class="p-0">
                 <div class="sheet-cuentas">
-                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                  <div>Darcleyto</div><div>MrMore</div><div>Arima</div><div>Blesd</div>
                 </div>
               </td>
               <td class="p-0">
                 <div class="sheet-cuentas">
-                  <div>—</div><div>—</div><div>—</div><div>—</div>
+                  <div>LEON DORADO</div><div>—</div><div>—</div><div>—</div>
                 </div>
               </td>
               <td class="p-0">
