--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
           <div class="row text-center">
             <div class="col-md-3 mb-3 mb-md-0">
               <div class="p-3">
-                <div class="h2 fw-bold text-primary">12</div>
+                <div class="h2 fw-bold text-primary">9</div>
                 <div style="color: rgba(255, 255, 255, 0.7);">Jugadores Totales</div>
               </div>
             </div>
             <div class="col-md-3 mb-3 mb-md-0">
               <div class="p-3">
-                <div class="h2 fw-bold text-info">46</div>
-                <div style="color: rgba(255, 255, 255, 0.7);">Partidas Jugadas</div>
+                <div class="h2 fw-bold text-info">12</div>
+                <div style="color: rgba(255, 255, 255, 0.7);">Total Teams</div>
               </div>
             </div>
             <div class="col-md-3 mb-3 mb-md-0">
@@ -246,7 +246,7 @@
 
   <footer class="footer" id="contacto">
     <div class="container">
-      <p class="footer__copy m-0">© 2025 — By Yover Castillo</p>
+      <p class="footer__copy m-0">© 2025 — Dev Yover Castillo</p>
     </div>
   </footer>
 
