--- a/live.html
+++ b/live.html
@@ -248,8 +248,8 @@
           <div class="col-md-8">
             <h5 class="fw-bold mb-2"><i class="bi bi-info-circle me-2"></i>Detalles de la partida</h5>
             <p class="text-muted mb-0">
-              Partida épica de la temporada 2025 donde Carlos lideró al equipo con estrategias avanzadas
-              y movimientos precisos que llevaron a la victoria contra guilds top del servidor.
+              Una de las partidas épicas del 2025, donde Carlos se consilidó  con estrategias avanzadas
+              y logrando victorias desicivas frente a clanes Tops.
             </p>
           </div>
           <div class="col-md-4">
@@ -731,7 +731,7 @@
 
   <footer class="footer" id="contacto">
     <div class="container">
-      <p class="footer__copy m-0">© 2025 — By Yover Castillo</p>
+      <p class="footer__copy m-0">© 2025 — Dev Yover Castillo</p>
     </div>
   </footer>
 
