--- a/prix.html
+++ b/prix.html
@@ -405,7 +405,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="footer__copy m-0">© 2025 — By Yover Castillo</p>
+        <p class="footer__copy m-0">© 2025 — Dev Yover Castillo</p>
       </div>
     </footer>
 
