--- a/live.html
+++ b/live.html
@@ -65,7 +65,7 @@
           </div>
           <div class="fw-bold fs-5 mb-2">Transmisión programada</div>
           <div class="text-center text-muted mb-4" style="max-width: 400px;">
-            La próxima transmisión en vivo del Guild Prix 2026 comenzará próximamente.
+            La próximas transmisiónes en vivo del Guild Prix 2026 comenzará próximamente.
             Mantente atento para ver la competencia en tiempo real.
           </div>
           <div class="d-flex align-items-center gap-3">
@@ -249,7 +249,7 @@
             <h5 class="fw-bold mb-2"><i class="bi bi-info-circle me-2"></i>Detalles de la partida</h5>
             <p class="text-muted mb-0">
               Una de las partidas épicas del 2025, donde Carlos se consilidó  con estrategias avanzadas
-              y logrando victorias desicivas frente a clanes Tops.
+              logrando victorias desicivas frente a clanes Tops.
             </p>
           </div>
           <div class="col-md-4">
