--- a/live.html
+++ b/live.html
@@ -63,9 +63,9 @@
             <div class="position-absolute top-50 start-50 translate-middle" 
                  style="width: 100px; height: 100px; border: 2px dashed rgba(124, 58, 237, 0.5); border-radius: 50%;"></div>
           </div>
-          <div class="fw-bold fs-5 mb-2">Transmisión programada</div>
+          <div class="fw-bold fs-5 mb-2">Transmisiónes programadas</div>
           <div class="text-center text-muted mb-4" style="max-width: 400px;">
-            La próximas transmisiónes en vivo del Guild Prix 2026 comenzará próximamente.
+            Las próximas transmisiónes en vivo del Guild Prix 2026 comenzarán próximamente.
             Mantente atento para ver la competencia en tiempo real.
           </div>
           <div class="d-flex align-items-center gap-3">
