--- a/prix.html
+++ b/prix.html
@@ -102,10 +102,10 @@
                 <th>PISADOR</th>
                 <th>Frank</th>
                 <th>Carlos</th>
-                <th>Chino</th>
                 <th>Benja</th>
                 <th>Yoel</th>
-                <th>Isaac</th>
+                <th>Isaac-Tume</th>
+                <th>Obs-Franco</th>
               </tr>
 
               <!-- CUENTAS  -->
