--- a/prix.html
+++ b/prix.html
@@ -104,7 +104,7 @@
                 <th>Carlos</th>
                 <th>Benja</th>
                 <th>Yoel</th>
-                <th>Isaac-Tume</th>
+                <th>Isaac-AlexE</th>
                 <th>Obs-Franco</th>
               </tr>
 
