--- a/prix.html
+++ b/prix.html
@@ -102,8 +102,8 @@
                 <th>PISADOR</th>
                 <th>Frank</th>
                 <th>Carlos</th>
+                <th>Chino</th>
                 <th>Benja</th>
-                <th>Yoel</th>
                 <th>Isaac-AlexE</th>
                 <th>Obs-Franco</th>
               </tr>
