--- a/prix.html
+++ b/prix.html
@@ -130,7 +130,7 @@
                 <td class="p-0">
                   <div class="sheet-cuentas">
                     <div>LEON DORADO</div>
-                    <div>—</div>
+                    <div>Kloster</div>
                     <div>—</div>
                     <div>—</div>
                   </div>
