--- a/prix.html
+++ b/prix.html
@@ -105,7 +105,7 @@
                 <th>Chino</th>
                 <th>Benja</th>
                 <th>Isaac-AlexE</th>
-                <th>Obs-Franco</th>
+                <th>Observador</th>
               </tr>
 
               <!-- CUENTAS  -->
