--- a/prix.html
+++ b/prix.html
@@ -104,7 +104,7 @@
                 <th>Carlos</th>
                 <th>Chino</th>
                 <th>Benja</th>
-                <th>Isaac-AlexE</th>
+                <th>Isaac</th>
                 <th>Observador</th>
               </tr>
 
