--- a/prix.html
+++ b/prix.html
@@ -114,9 +114,9 @@
                 <td class="p-0">
                   <div class="sheet-cuentas">
                     <div>Explosive</div>
-                    <div>Locurita</div>
                     <div>l=APOCALIPSIS=l</div>
                     <div>SexyPersefone</div>
+                    <div>—</div>
                   </div>
                 </td>
                 <td class="p-0">
