--- a/prix.html
+++ b/prix.html
@@ -137,10 +137,10 @@
                 </td>
                 <td class="p-0">
                   <div class="sheet-cuentas">
-                    <div>—</div>
-                    <div>—</div>
-                    <div>—</div>
-                    <div>—</div>
+                    <div>Bunny</div>
+                    <div>Flancita </div>
+                    <div>Esteban</div>
+                    <div>Shordi</div>
                   </div>
                 </td>
                 <td class="p-0">
