--- a/prix.html
+++ b/prix.html
@@ -132,7 +132,7 @@
                     <div>LEON DORADO</div>
                     <div>Kloster</div>
                     <div>7Mesut</div>
-                    <div>—</div>
+                    <div>Agnostico*</div>
                   </div>
                 </td>
                 <td class="p-0">
